pamc/src/tests/sample_code/should_succeed/should_succeed_with_warnings/check/type_of_type0.ph
type Unit {
    .C: Unit,
}

let x = check (Type: ?) {
    Unit.C
};
