pamc/src/tests/sample_code/should_fail/type_check/extraneous_match_case.ph
type Bool {
    .True: Bool,
    .False: Bool,
}

let foo = match Bool.True {
    .True => Bool.False,
    .Flaes => Bool.True,
};
